# lakehouse-from-scratch

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  databricks.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: build_gold_layer.py  ingest_to_bronze.py  process_to_silver.py
src/config/: settings.py
src/contracts/: arxiv_contract.py
src/ingestion/: api_client.py  main.py  writer.py
src/quality/: qa_checks.py
src/transformation/: build_gold_layer.py  process_to_silver.py
src/utils/: logging_setup.py  spark_utils.py
tests/: conftest.py
tests/integration/: test_ingestion_orchestrator.py
tests/quality/: test_silver_layer_quality.py
tests/spark/: conftest.py  test_gold_compute.py  test_silver_transform.py
tests/unit/: test_api_client.py  test_arxiv_contract.py  test_build_gold_layer_module.py  test_ingestion_main.py  test_parser.py  test_process_to_silver.py  test_spark_utils.py  test_writer.py
