[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse-from-scratch"
version = "0.1.0"
description = "Data Lakehouse Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.1",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pyspark==3.5.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "ruff>=0.12.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "quality: marks tests as data quality tests (slow, requires pipeline run)",
]